--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log in"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="375dp" />
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="347dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Don't have an account?"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="436dp" />
+
+    <Button
+        android:id="@+id/btnToCreate"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="172dp"
+        android:layout_height="36dp"
+        android:text="Create account"
+        android:textAlignment="viewStart"
+        android:textSize="10sp"
+        tools:layout_editor_absoluteX="201dp"
+        tools:layout_editor_absoluteY="426dp" />
 </android.support.constraint.ConstraintLayout>
