--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,4 +6,48 @@
     android:layout_height="match_parent"
     tools:context="com.example.sylviawan.traveldiary.profile">
 
+    <Button
+        android:id="@+id/btnToAddEntry"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="316dp"
+        android:layout_height="44dp"
+        android:text="Add Entry"
+        tools:layout_editor_absoluteX="34dp"
+        tools:layout_editor_absoluteY="184dp" />
+
+    <Button
+        android:id="@+id/btnToEntries"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="317dp"
+        android:layout_height="48dp"
+        android:text="Entries"
+        tools:layout_editor_absoluteX="34dp"
+        tools:layout_editor_absoluteY="258dp" />
+
+    <Button
+        android:id="@+id/btnToSet"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="314dp"
+        android:layout_height="45dp"
+        android:text="Settings"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="339dp" />
+
+    <Button
+        android:id="@+id/btnLogOut"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="313dp"
+        android:layout_height="46dp"
+        android:text="Log out"
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="417dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome back!"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="86dp" />
 </android.support.constraint.ConstraintLayout>
