--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -32,7 +32,7 @@
         tools:layout_editor_absoluteY="246dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/cPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -41,7 +41,7 @@
         tools:layout_editor_absoluteY="233dp" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/cUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
