--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,78 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sylviawan.traveldiary.login">
+    android:orientation="vertical"
+    android:visibility="visible"
+    tools:context="com.example.sylviawan.traveldiary.Login"
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="83dp"
+        android:layout_gravity="center"
         android:text="Enter details"
-        android:textSize="24sp"
+        android:textSize="36sp"
         tools:layout_editor_absoluteX="126dp"
         tools:layout_editor_absoluteY="86dp" />
 
-    <EditText
-        android:id="@+id/loginUN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="181dp" />
-
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="102dp"
+        android:layout_height="21dp"
         android:text="Username:"
-        tools:layout_editor_absoluteX="49dp"
-        tools:layout_editor_absoluteY="196dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="154dp" />
+
+    <EditText
+        android:id="@+id/loginUN"
+        android:layout_width="214dp"
+        android:layout_height="39dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="178dp" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:text="Password:"
-        tools:layout_editor_absoluteX="49dp"
-        tools:layout_editor_absoluteY="279dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="247dp" />
 
     <EditText
         android:id="@+id/loginpw"
-        android:layout_width="wrap_content"
+        android:layout_width="215dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="126dp"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="268dp" />
 
     <Button
         android:id="@+id/btnlogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:elevation="0dp"
         android:text="Log in"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="347dp" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Don't have an account?"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="436dp" />
 
-    <Button
-        android:id="@+id/btnToCreate"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="172dp"
-        android:layout_height="36dp"
-        android:text="Create account"
-        android:textAlignment="viewStart"
-        android:textSize="10sp"
-        tools:layout_editor_absoluteX="201dp"
-        tools:layout_editor_absoluteY="426dp" />
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:text="Don't have an account?"
+            android:textAlignment="textStart"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            tools:layout_editor_absoluteX="57dp"
+            tools:layout_editor_absoluteY="436dp" />
+
+        <Button
+            android:id="@+id/btnToCreate"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="135dp"
+            android:layout_height="23dp"
+            android:layout_alignBottom="@+id/textView5"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/textView5"
+            android:layout_toRightOf="@+id/textView5"
+            android:layout_weight="0.05"
+            android:text="Create account"
+            android:textAlignment="viewStart"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="196dp"
+            tools:layout_editor_absoluteY="422dp" />
+
+    </RelativeLayout>
+</LinearLayout>
