--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,53 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sylviawan.traveldiary.profile">
+    tools:context="com.example.sylviawan.traveldiary.Profile" >
 
-    <Button
-        android:id="@+id/btnToAddEntry"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="316dp"
-        android:layout_height="44dp"
-        android:text="Add Entry"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="184dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="16dp"
+        android:paddingLeft="64dp"
+        android:paddingRight="64dp"
+        android:paddingTop="16dp"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="16dp">
 
-    <Button
-        android:id="@+id/btnToEntries"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="317dp"
-        android:layout_height="48dp"
-        android:text="Entries"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="258dp" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="258dp"
+            android:layout_height="wrap_content"
+            android:text="   Welcome back!"
+            android:textSize="30sp"
+            tools:layout_editor_absoluteX="90dp"
+            tools:layout_editor_absoluteY="86dp" />
 
-    <Button
-        android:id="@+id/btnToSet"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="314dp"
-        android:layout_height="45dp"
-        android:text="Settings"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="339dp" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_weight="0.05"/>
 
-    <Button
-        android:id="@+id/btnLogOut"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="313dp"
-        android:layout_height="46dp"
-        android:text="Log out"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="417dp" />
+        <Button
+            android:id="@+id/btnToEntries"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Entries"
+            tools:layout_editor_absoluteX="34dp"
+            tools:layout_editor_absoluteY="258dp"
+            android:background="#71ffffff"/>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome back!"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="86dp" />
-</android.support.constraint.ConstraintLayout>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_weight="0.05"/>
+
+        <Button
+            android:id="@+id/btnToAddEntry"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:text="Add Entry"
+            tools:layout_editor_absoluteX="34dp"
+            tools:layout_editor_absoluteY="184dp"
+            android:background="#71ffffff"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_weight="0.05"/>
+
+        <Button
+            android:id="@+id/btnToSet"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="257dp"
+            android:layout_height="45dp"
+            android:text="Settings"
+            tools:layout_editor_absoluteX="35dp"
+            tools:layout_editor_absoluteY="339dp"
+            android:background="#71ffffff"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_weight="0.05"/>
+
+        <Button
+            android:id="@+id/btnLogOut"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="259dp"
+            android:layout_height="46dp"
+            android:text="Log out"
+            tools:layout_editor_absoluteX="36dp"
+            tools:layout_editor_absoluteY="417dp"
+            android:background="#71ffffff"/>
+
+    </LinearLayout>
+</RelativeLayout>
