--- a/app/src/main/res/layout/activity_add_entry.xml
+++ b/app/src/main/res/layout/activity_add_entry.xml
@@ -1,102 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bkground1"
     tools:context="com.example.sylviawan.traveldiary.AddEntry">
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add a new entry!"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteY="36dp"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="46dp"
+        android:text="Add new entry!"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title:"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="100dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView7"
+        android:layout_marginLeft="34dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="46dp"
+        android:text="Title:" />
+
+    <EditText
+        android:id="@+id/editTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text|textPersonName"
+        android:layout_alignBaseline="@+id/textView10"
+        android:layout_alignBottom="@+id/textView10"
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignStart="@+id/textView10"
+        android:layout_marginLeft="39dp"
+        android:layout_marginStart="39dp" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Location:"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="191dp" />
+        android:layout_alignEnd="@+id/textView10"
+        android:layout_alignRight="@+id/textView10"
+        android:layout_below="@+id/editTitle"
+        android:layout_marginTop="22dp"
+        android:text="Date:" />
+
+    <EditText
+        android:id="@+id/editDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="date"
+        android:layout_alignBaseline="@+id/textView11"
+        android:layout_alignBottom="@+id/textView11"
+        android:layout_alignLeft="@+id/editTitle"
+        android:layout_alignStart="@+id/editTitle" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date:"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="149dp" />
-
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="180dp"
-        android:layout_height="35dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="87dp"
-        tools:layout_editor_absoluteY="90dp" />
-
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
-        android:layout_width="226dp"
-        android:layout_height="19dp"
-        tools:layout_editor_absoluteY="191dp"
-        tools:layout_editor_absoluteX="87dp" />
+        android:layout_alignEnd="@+id/textView11"
+        android:layout_alignRight="@+id/textView11"
+        android:layout_below="@+id/editDate"
+        android:layout_marginTop="20dp"
+        android:text="Location:" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Write about it:"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="246dp" />
+        android:text="Write about it!"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/textView12"
+        android:layout_alignStart="@+id/textView12" />
 
     <EditText
-        android:id="@+id/multiLine"
-        android:layout_width="270dp"
-        android:layout_height="73dp"
+        android:id="@+id/editDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
         android:ems="10"
         android:inputType="textMultiLine"
-        android:singleLine="false"
-        android:visibility="visible"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="277dp" />
+        android:layout_below="@+id/textView13"
+        android:layout_alignLeft="@+id/mapView"
+        android:layout_alignStart="@+id/mapView" />
 
     <Button
         android:id="@+id/btnAddEnt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add"
-        tools:layout_editor_absoluteX="74dp"
-        tools:layout_editor_absoluteY="403dp" />
+        android:layout_below="@+id/editDesc"
+        android:layout_marginTop="59dp"
+        android:layout_toEndOf="@+id/textView12"
+        android:layout_toRightOf="@+id/textView12"
+        android:onClick="onClickButton"
+        android:text="Add" />
 
     <Button
         android:id="@+id/btnClr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Clear"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="403dp" />
+        android:layout_alignBaseline="@+id/btnAddEnt"
+        android:layout_alignBottom="@+id/btnAddEnt"
+        android:layout_toRightOf="@+id/btnAddEnt"
+        android:layout_toEndOf="@+id/btnAddEnt"
+        android:layout_marginLeft="67dp"
+        android:layout_marginStart="67dp" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="180dp"
-        android:layout_height="35dp"
+        android:id="@+id/editLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView13"
+        android:layout_alignLeft="@+id/editDate"
+        android:layout_alignStart="@+id/editDate"
         android:ems="10"
-        android:inputType="date"
-        tools:layout_editor_absoluteX="87dp"
-        tools:layout_editor_absoluteY="137dp" />
+        android:inputType="textPersonName" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
