--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     android:visibility="visible"
     tools:context="com.example.sylviawan.traveldiary.Login"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@drawable/bkground2">
 
     <TextView
         android:id="@+id/textView"
@@ -18,6 +19,11 @@
         android:textSize="36sp"
         tools:layout_editor_absoluteX="126dp"
         tools:layout_editor_absoluteY="86dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:layout_weight="0.05"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -56,8 +62,9 @@
 
     <Button
         android:id="@+id/btnlogin"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="76dp"
+        android:layout_height="36dp"
+        android:background="#97c6d9"
         android:elevation="0dp"
         android:text="Log in"
         tools:layout_editor_absoluteX="148dp"
@@ -73,7 +80,6 @@
             android:layout_width="150dp"
             android:layout_height="30dp"
             android:text="Don't have an account?"
-            android:textAlignment="textStart"
             android:textSize="14sp"
             android:textStyle="italic"
             tools:layout_editor_absoluteX="57dp"
@@ -84,13 +90,12 @@
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="135dp"
             android:layout_height="23dp"
-            android:layout_alignBottom="@+id/textView5"
+            android:layout_alignBottom="@id/textView5"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/textView5"
-            android:layout_toRightOf="@+id/textView5"
+            android:layout_toEndOf="@id/textView5"
+            android:layout_toRightOf="@id/textView5"
             android:layout_weight="0.05"
             android:text="Create account"
-            android:textAlignment="viewStart"
             android:textSize="10sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="196dp"
